# buffdb

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
benches/: blob.rs  kv.rs  main.rs
examples/typescript/: index.ts  package-lock.json  package.json  tsconfig.json
proto/: blob.proto  kv.proto  query.proto
src/: blob.rs  cli.rs  conv.rs  db_connection.rs  helpers.rs  internal_macros.rs  interop.rs  kv.rs  lib.rs  location.rs  main.rs  query.rs  queryable.rs  tracing_shim.rs  transitive.rs
src/backend/: arc.rs  duckdb.rs  helpers.rs  mod.rs  rocksdb.rs  sqlite.rs
src/blob/: README.md  blob_schema.proto  mod.rs
src/conv/: grpc.rs
src/frontend/: error.rs  grpc.rs  mod.rs
src/handler/: blob.rs  kv.rs  mod.rs  query.rs
src/kv/: README.md  kv_schema.proto  mod.rs
src/schema/: blob.proto  common.proto  kv.proto
src/store/: mod.rs
src/store/blob/: README.md  blob_schema.fbs  blob_schema.proto  mod.rs  service.rs
src/store/kv/: README.md  kv_schema.proto  mod.rs  service.rs
src/store/stream/: README.md  mod.rs  service.rs  stream_schema.proto
src/structs/: blob.rs  kv.rs  mod.rs  query.rs
tests/: blob.rs  kv.rs
tests/helpers/: mod.rs
tests/integration/: blob.rs  kv.rs  main.rs  query.rs
tests/integration/helpers/: mod.rs
