[package]
name = "buffdb"
authors = ["Marcus Eagan", "Jacob Pratt"]
version = "0.2.0"
edition = "2021"
description = "Embedded storage at the speed of light."
repository = "https://github.com/buffdb/buffdb"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["database", "storage", "embedded", "key-value", "blob"]
categories = ["database-implementations", "embedded"]

[[bin]]
name = "buffdb"
required-features = ["binary"]

[features]
default = []
binary = ["dep:anyhow", "dep:clap"]

[dependencies]
anyhow = { version = "1.0.86", optional = true }
async-stream = "0.3.5"
clap = { version = "4.5.10", features = ["derive"], optional = true }
futures = "0.3.30"
hyper-util = "0.1.6"
prost = "0.13.1"
rand = "0.8.5"
rocksdb = { version = "0.22.0", default-features = false, features = ["zstd"] }
sha2 = "0.10.8"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
tokio-stream = "0.1.15"
tonic = "0.12.1"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.12.1"

[dev-dependencies]
anyhow = "1.0.86"
serial_test = "3.1.1"
